# amo-gate

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
docs/: example.env
src/: main.py
src/gate/amo/: __init__.py  amo_client.py  amo_register.py  mocker_lead_id.py  pipeline_manager.py  services.py
src/gate/amo/models/: booked_lead.py  bookeed_lead.py  custom_lead.py  mc_lead.py
src/gate/amo/patches/: __init__.py  base_custom_field.py  date_custom_field.py  generic_interaction.py
src/gate/app/: api.py
src/gate/settings/: config.py  logging_config.py
src/gate/transform/: booked_models.py  mc_models.py
src/gate/utils/: parse_args.py  prefix_logger_adapter.py
src/gate/workers/: queue_manager.py
src/tests/: conftest.py
src/tests/data/: booked.json
src/tests/integrations/: test_amo_client.py  test_api.py  test_services.py
